--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^10.0.0",
     "express": "4.17.1",
     "joi": "^17.4.1",
-    "morgan": "1.10.0"
+    "mongoose": "^5.13.2",
+    "morgan": "1.10.0",
+    "path": "^0.12.7",
+    "xer": "0.0.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
@@ -22,5 +26,21 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "nodemon": "2.0.7"
-  }
+  },
+  "description": "Выполните форк этого репозитория для выполнения домашних заданий (2-6)\r Форк создаст репозиторий на вашем http://github.com",
+  "main": ".eslintrc.js",
+  "bin": {
+    "template": "server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VyacheslavRus/nodejs-homework-template.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/VyacheslavRus/nodejs-homework-template/issues"
+  },
+  "homepage": "https://github.com/VyacheslavRus/nodejs-homework-template#readme"
 }
